--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ dependencies {
     compile 'com.google.guava:guava:20.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     compile 'commons-validator:commons-validator:1.6'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+  implementation 'com.squareup.picasso:picasso:2.71828'
+  annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 
 
